@@ -1860,8 +1860,8 @@ YAHOO.namespace("bethel.contentlayout");
         this.partEditorPanel = new PartEditorPanel("part-editor-panel",
             {fixedcenter: "contained",
                 draggable: false,
-                width: '600px',
-                height: '560px',
+                width: '740px',
+                height: '600px',
                 modal: true,
                 hideaftersubmit: true,
                 constraintoviewport: true,
@@ -1878,8 +1878,8 @@ YAHOO.namespace("bethel.contentlayout");
         this.partAddPanel = new PartEditorPanel("part-add-panel",
             {fixedcenter: "contained",
                 draggable: false,
-                width: '750px',
-                height: '560px',
+                width: '920px',
+                height: '600px',
                 modal: true,
                 hideaftersubmit: true,
                 constraintoviewport: true,
